--- a/slot_oyunu3/index.html
+++ b/slot_oyunu3/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
 
-    <audio id="backgroundMusic" src="../assets/audio/background_music.mp3" loop></audio>
-    <audio id="spinSound" src="../assets/audio/spin_sound.mp3"></audio>
-    <audio id="winSound" src="../assets/audio/win_sound.mp3"></audio>
-    <audio id="bonusSound" src="../assets/audio/bonus_sound.mp3"></audio>
-    <audio id="safeOpenSound" src="../assets/audio/safe_open.mp3"></audio>
-    <audio id="bombSound" src="../assets/audio/bomb_sound.mp3"></audio>
+    <audio id="backgroundMusic" src="../assets/audio/resident_background_music.mp3" loop></audio>
+    <audio id="spinSound" src="../assets/audio/resident_spin_sound.mp3"></audio>
+    <audio id="winSound" src="../assets/audio/resident_win_sound.mp3"></audio>
+    <audio id="bonusSound" src="../assets/audio/resident_bonus_sound.mp3"></audio>
+    <audio id="safeOpenSound" src="../assets/audio/resident_safe_open.mp3"></audio>
+    <audio id="bombSound" src="../assets/audio/resident_bomb_sound.mp3"></audio>
 
     <div class="slot-container">
         <button id="backToLobbyButton" class="back-button">Lobiye Dön</button>
