--- a/slot_oyunu3/index.html
+++ b/slot_oyunu3/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resident Slot Oyunu</title>
-    <link rel="stylesheet" href="slot_oyunu3/style.css">
-    <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <audio id="backgroundMusic" src="../assets/sounds/resident_background_music.mp3" loop></audio>
-    <audio id="spinSound" src="../assets/sounds/resident_spin_sound.mp3"></audio>
-    <audio id="winSound" src="../assets/sounds/resident_win_sound.mp3"></audio>
-    <audio id="bonusSound" src="../assets/sounds/resident_bonus_sound.mp3"></audio>
-    <audio id="safeOpenSound" src="../assets/sounds/resident_safe_open.mp3"></audio>
-    <audio id="bombSound" src="../assets/sounds/resident_bomb_sound.mp3"></audio>
+    <audio id="backgroundMusic" src="assets/sounds/resident_background_music.mp3" loop></audio>
+    <audio id="spinSound" src="assets/sounds/resident_spin_sound.mp3"></audio>
+    <audio id="winSound" src="assets/sounds/resident_win_sound.mp3"></audio>
+    <audio id="bonusSound" src="assets/sounds/resident_bonus_sound.mp3"></audio>
+    <audio id="safeOpenSound" src="assets/sounds/resident_safe_open.mp3"></audio>
+    <audio id="bombSound" src="assets/sounds/resident_bomb_sound.mp3"></audio>
 
     <div class="slot-container">
         <div class="top-info">
@@ -58,7 +58,7 @@
         <p id="winAmount" class="win-amount"></p>
 
         <div class="character-area">
-            <img id="slotCharacter" src="../assets/images/resident_character.png" alt="Oyun Karakteri">
+            <img id="slotCharacter" src="assets/images/resident_character.png" alt="Oyun Karakteri">
         </div>
 
         <div class="controls-wrapper">
@@ -87,7 +87,7 @@
             <h3>Bonus Oyun Bilgisi</h3>
             <div class="bonus-info">
                 <p>
-                    3 veya daha fazla <img src="../assets/images/resident_kasa.png" alt="Kasa" style="width: 25px; height: 25px; vertical-align: middle;"> sembolü, bonus oyununu tetikler.
+                    3 veya daha fazla <img src="assets/images/resident_kasa.png" alt="Kasa" style="width: 25px; height: 25px; vertical-align: middle;"> sembolü, bonus oyununu tetikler.
                     Bonus oyununda kasaları açarak gizli ödülleri topla. Dikkat! Bomba içeren bir kasa bonus oyununu sonlandırır.
                 </p>
             </div>
@@ -103,6 +103,6 @@
         </div>
     </div>
 
-    <script src="slot_oyunu3/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
