--- a/slot_oyunu3/index.html
+++ b/slot_oyunu3/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resident Slot Oyunu</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../assets/images/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <audio id="backgroundMusic" src="assets/sounds/resident_background_music.mp3" loop></audio>
-    <audio id="spinSound" src="assets/sounds/resident_spin_sound.mp3"></audio>
-    <audio id="winSound" src="assets/sounds/resident_win_sound.mp3"></audio>
-    <audio id="bonusSound" src="assets/sounds/resident_bonus_sound.mp3"></audio>
-    <audio id="safeOpenSound" src="assets/sounds/resident_safe_open.mp3"></audio>
-    <audio id="bombSound" src="assets/sounds/resident_bomb_sound.mp3"></audio>
+    <audio id="backgroundMusic" src="../assets/sounds/resident_background_music.mp3" loop></audio>
+    <audio id="spinSound" src="../assets/sounds/resident_spin_sound.mp3"></audio>
+    <audio id="winSound" src="../assets/sounds/resident_win_sound.mp3"></audio>
+    <audio id="bonusSound" src="../assets/sounds/resident_bonus_sound.mp3"></audio>
+    <audio id="safeOpenSound" src="../assets/sounds/resident_safe_open.mp3"></audio>
+    <audio id="bombSound" src="../assets/sounds/resident_bomb_sound.mp3"></audio>
 
     <div class="slot-container">
         <div class="top-info">
-            <span class="bet">Bahis: <span id="betAmountDisplay">10</span> TL</span>
             <h1>RESIDENT SLOT</h1>
-            <span class="credit">Kredi: <span id="balanceDisplay">0.00</span> TL</span>
+            <span class="bet">Kredi: <span id="balanceDisplay">0.00</span> TL</span>
+            <span class="credit">Bahis: <span id="betAmountDisplay">10</span> TL</span>
         </div>
 
         <div class="line-selector">
@@ -58,7 +58,7 @@
         <p id="winAmount" class="win-amount"></p>
 
         <div class="character-area">
-            <img id="slotCharacter" src="assets/images/resident_character.png" alt="Oyun Karakteri">
+            <img id="slotCharacter" src="../assets/images/resident_character.png" alt="Oyun Karakteri">
         </div>
 
         <div class="controls-wrapper">
@@ -87,7 +87,7 @@
             <h3>Bonus Oyun Bilgisi</h3>
             <div class="bonus-info">
                 <p>
-                    3 veya daha fazla <img src="assets/images/resident_kasa.png" alt="Kasa" style="width: 25px; height: 25px; vertical-align: middle;"> sembolü, bonus oyununu tetikler.
+                    3 veya daha fazla <img src="../assets/images/resident_kasa.png" alt="Kasa" style="width: 25px; height: 25px; vertical-align: middle;"> sembolü, bonus oyununu tetikler.
                     Bonus oyununda kasaları açarak gizli ödülleri topla. Dikkat! Bomba içeren bir kasa bonus oyununu sonlandırır.
                 </p>
             </div>
