--- a/slot_oyunu3/index.html
+++ b/slot_oyunu3/index.html
@@ -33,6 +33,10 @@
             <button class="line-btn active" data-lines="9">9 HAT</button>
         </div>
 
+        <div class="character-area">
+            <img id="slotCharacter" src="../assets/images/resident_character.png" alt="Oyun Karakteri">
+        </div>
+
         <div class="reels-wrapper">
             <div class="reels-grid">
                 <div class="reel" data-reel-index="0"></div>
@@ -57,10 +61,6 @@
         <p id="message" class="message">Hoş Geldin! Spinle Kazan!</p>
         <p id="winAmount" class="win-amount"></p>
 
-        <div class="character-area">
-            <img id="slotCharacter" src="../assets/images/resident_character.png" alt="Oyun Karakteri">
-        </div>
-
         <div class="controls-wrapper">
             <div class="controls">
                 <button id="autoPlayButton">OTOMATİK</button>
@@ -73,9 +73,12 @@
         </div>
 
         <button id="backToLobbyButton" class="back-button">LOBİ</button>
-        <button id="muteButton" class="mute-button">🔇</button>
-        <div class="volume-slider">
-            <input type="range" min="0" max="100" value="100">
+
+        <div class="sound-controls">
+            <button id="muteButton" class="mute-button">🔇</button>
+            <div class="volume-slider">
+                <input type="range" min="0" max="100" value="100">
+            </div>
         </div>
     </div>
 
